--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=0.4.10"
   },
   "dependencies": {
-    "sylvester": ">= 0.0.12",
+    "sylvester": "https://github.com/jascor/node-sylvester",
     "apparatus": ">= 0.0.9",
     "underscore": ">=1.3.1"
   },
